# ComputationalStatisticsKEN4258-ASG2

./: Assignment2.ipynb  README.md  Task1L.ipynb  Task1R.ipynb  Task3 v2 K=300 MI.ipynb  Task3 v2 K=300 MM.ipynb  compstat-notebook.ipynb  compstats-task-3.ipynb  p_values_adj.csv  p_values_adj_MIK300.csv  p_values_adj_MMK300.csv  p_values_left.csv  p_values_right.csv  pyproject.toml  temp.ipynb
