[tool.poetry]
name = "computationalstatisticsken4258-asg2"
version = "0.1.0"
description = "See README.md"
authors = ["Yannick Damoiseaux, Martijn Elands"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
scipy = "^1.12.0"
statsmodels = "^0.14.1"
scikit-learn = "^1.4.1.post1"
tqdm = "^4.66.2"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
